--- a/Sign Up/signUp_front.html
+++ b/Sign Up/signUp_front.html
@@ -6,23 +6,39 @@
 	<meta charset="UTF-8">
 	
 	<title>Sign Up</title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="../css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+
+	<div class="container text-center">
+		<h1><u>Sign Up</u></h1>
+
+		<hr>
+
+		<form class="col-sm-offset-2 col-sm-8 form-horizontal" role="form" action="signUp.php" method="POST">
 	
-	<form action="signUp.php" method="POST">
-	
-		<label for="username">Username : </label>
-		<input name="username" id="username">
-		<br>
+			<div class="form-group">
+				<label for="username" class="col-sm-2 control-label">Username : </label>
+				<div class="col-sm-10"><input name="username" id="username" class="form-control"></div>
+			</div>
+			
+			<div class="form-group">
+				<label for="passsword" class="col-sm-2 control-label">Password : </label>
+				<div class="col-sm-10"><input type="password" name="password" id="password" class="form-control"></div>
+			</div>
+			
+			<input class="btn btn-primary" type="submit" value="Sign Up">
 		
-		<label for="passsword">Password : </label>
-		<input type="password" name="password" id="password">
-		<br>
-		
-		<input type="submit">
-		
-	</form>
+		</form>
+
+
+	</div>
+
+	<script src="../js/jQuery.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
 	
 </body>
 
